nicknamer/server/lib/tests/snapshots/tests_names_endpoints_tests_test__api__v1__can_create_name_via_api.snap
---
source: .:1777
expression: snapshot_data
---
status: 201
headers:
  content-type: application/json
body:
  discord_id: 555666777
  id: 1
  name: NewApiUser
  server_id: test-server-1
test_name: api_v1_create_name_success
