nicknamer/server/lib/tests/snapshots/tests_names_endpoints_tests_test__api__v1__can_filter_names_by_server_id.snap
---
source: nicknamer/server/tests/names_endpoints_tests.rs
expression: snapshot_data
---
status: 200
headers:
  content-type: application/json
body:
  count: 2
  names:
    - discord_id: 123456789
      id: 1
      name: Alice
      server_id: server1
    - discord_id: 987654321
      id: 2
      name: Bob
      server_id: server1
test_name: api_v1_names_filtered_server1
