nicknamer/server/lib/tests/snapshots/tests_names_endpoints_tests_test__api__v1__can_return_empty_list_for_nonexistent_server.snap
---
source: nicknamer/server/tests/names_endpoints_tests.rs
expression: snapshot_data
---
status: 200
headers:
  content-type: application/json
body:
  count: 0
  names: []
test_name: api_v1_names_filtered_nonexistent
