nicknamer/server/lib/tests/snapshots/tests_names_endpoints_tests_test__api__v1__can_update_name_by_discord_server_via_api.snap
---
source: .:2030
expression: snapshot_data
---
status: 200
headers:
  content-type: application/json
body:
  discord_id: 123456789
  id: 1
  name: UpdatedName
  server_id: test-server-123
test_name: api_v1_update_name_by_discord_server_success
