nicknamer/server/lib/tests/snapshots/tests_names_endpoints_tests_test__api__v1__can_update_name_by_discord_server_with_special_characters_via_api.snap
---
source: .:2141
expression: snapshot_data
---
status: 200
headers:
  content-type: application/json
body:
  discord_id: 444555666
  id: 1
  name: José María 🎮 with émojis & spëcial chars!
  server_id: special-server-123
test_name: api_v1_update_name_by_discord_server_special_chars
