nicknamer/server/lib/tests/snapshots/tests_names_endpoints_tests_test__api__v1__can_update_same_discord_id_different_servers_via_api.snap
---
source: .:2244
expression: snapshot_data
---
status: 200
headers:
  content-type: application/json
body:
  discord_id: 777888999
  id: 1
  name: UpdatedName1
  server_id: server-1
test_name: api_v1_update_name_different_servers
