nicknamer/server/lib/tests/snapshots/tests_names_endpoints_tests_test__api__v1__cannot_create_duplicate_name_via_api.snap
---
source: .:1838
expression: snapshot_data
---
status: 409
headers:
  content-type: application/json
body:
  error: "Name already exists for Discord ID 123456789 in server 'test-server-1'"
  message: "An error occurred: Name already exists for Discord ID 123456789 in server 'test-server-1'"
test_name: api_v1_create_name_duplicate_error
